[gd_scene load_steps=4 format=2]

[ext_resource path="res://Space/StickedRobot/sticked_robot.png" type="Texture" id=1]
[ext_resource path="res://Space/StickedRobot/StickedRobot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.1145, 60.767 )

[node name="Node2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="sticked_robot" type="Sprite" parent="."]
scale = Vector2( 0.659821, 0.609425 )
texture = ExtResource( 1 )

[node name="StickingField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StickingField"]
shape = SubResource( 1 )

[connection signal="area_entered" from="StickingField" to="." method="_on_StickingField_area_entered"]
